--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
 html, body, #app {
   height: 100%;
+  font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
 }
